tests: add more tests